04-09-2014 6.0.21
- Bug in invoicing from projects

03-09-2014 6.0.20
- Bug in invoicing from projects

29-08-2014 6.0.19
- Invoicing for projects2.

21-08-2014 6.0.18
- Added icons for male and female
- Added colorpicker to contacts and companies. With this colorpicker you can set the text color of the contacts and companies in the Grid.

18-08-2014 6.0.17
- Integrated WebODF editor for online odt documents.

14-08-2014 6.0.16
- Fixes for customer module.
- Default theme fixed.

12-08-2014 6.0.15
- Fixed public symlink
- Fixed dovecot auth for postfix

12-08-2014 6.0.14
- Fixed install bug
- Removed spamassassin, amavis and clamav integration. Manual installation works better.

12-08-2014 6.0.13
- Namespace bugs
- Fixes of 5.0.77

12-08-2014 6.0.12
- Lists: Increased timeout for importing lists so the javascript doesn't throw an error after 30 seconds.
- Lists: Make deleting of records more efficient by setting cascade on the database table.
- Lists: Added maximize option to lists browser window.
- Timeregistration2: Fixed editing of existing time entries (showEditDialog call)
- Lists: Saving dialog state of listrecord dialog and added scroll option to this dialog
- Lists: Added pagination to listrecord grid
- Lists: Fixed ordering of listrecord items in list
- Lists: Added dutch translation
- Lists: Fixed bug with the browse button and namespaces
- Summary: Automatically open the Summary module if the logged in user has an unread announcement.


06-08-2014 6.0.10
- Projects2: Tags like {project:name} and {project:path} now available for the Name field of Project Template Jobs.
- Timeregistration 2: Cannot add/edit time entries in closed week.
- Billing: PDF: if entire summary block at the end does not fit on one page, it is put at the beginning of the next page.

01-08-2014 6.0.9
- Holidays: National holiday hours displayed in holiday manager's main grid.
- Holidays: Warn holiday manager if a month's credit becomes negative.